--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "lucide-vue-next": "^0.553.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
